--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
       opacity: 1;
       transform: translateY(650px);
     }
+      body{
+      background-colour: #212121;
   }
+    }
 
   @keyframes astronaut {
     0% {
