--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
       transform: translateY(650px);
     }
       body{
-      background-colour: #212121;
-  }
+      background-colour:#212121; }
     }
 
   @keyframes astronaut {
